--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>쿠팡 로그인</title>
+    <!-- CDN 1 : head에 넣는다. -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 <style>
+    /* CDN 2 : style 안에서 불러온다. */
+    @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+
+
     form {
         width: 520px;
+        font-family: 'Nanum Gothic', sans-serif;
     }
 
     .input-group{
-        color: red
+        
     }
     .btn{
         font-size: 17px;
@@ -30,7 +37,7 @@
     }
 </style>
 </head>
-<body>
+<body>                                                                                                                                                                                                                                                                                                                                          
     <form action="method">
         <header>
             <img src="/images/coupang.png" alt="">
@@ -38,15 +45,19 @@
             
             <main>
                 <div class="input-group">
-
+                    <label for=""><i class='bx bx-envelope'></i></label>
+                    <input type="text">
                 </div>
 
                 <div class="input-group">
-
+                    <label for=""><i class='bx bx-lock'></i></label>
+                    <input type="text">
                 </div>
 
                 <div class="input-check-find">
-
+                    <input type="checkbox">
+                    <label for="">로그인 상태 유지</label>
+                    <a href="">아이디(이메일)/비밀번호 찾기 ></a>
                 </div>
 
                 <div class="btn login">
@@ -70,3 +81,5 @@
 
 </body>
 </html>
+<!-- CDN 3 : 맨 아래에 script로 넣는다. -->
+<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
