--- a/index.html
+++ b/index.html
@@ -7,40 +7,12 @@
     <title>쿠팡 로그인</title>
     <!-- CDN 1 : head에 넣는다. -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-<style>
-    /* CDN 2 : style 안에서 불러온다. */
-    @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
-
-
-    form {
-        width: 520px;
-        font-family: 'Nanum Gothic', sans-serif;
-    }
-
-    .input-group{
-        
-    }
-    .btn{
-        font-size: 17px;
-        text-align: center;
-        padding: 16px;
-        border-radius: 2px;
-    }
-    .login{
-        color: white;
-        background-color: #0074e9;
-    }
-    .join{
-        color: #0074e9;
-        background-color: white;
-        border: 1px solid #ccc;
-    }
-</style>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>                                                                                                                                                                                                                                                                                                                                          
     <form action="method">
         <header>
-            <img src="/images/coupang.png" alt="">
+            <img src="/assets/images/coupang.png" alt="">
         </header>
             
             <main>
