--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
                 </div>
 
                 <div class="input-check-find">
-                    <input type="checkbox">
-                    <label for="">로그인 상태 유지</label>
+                    <div>
+                        <input type="checkbox">
+                        <label for="">로그인 상태 유지</label>
+                    </div>
                     <a href="">아이디(이메일)/비밀번호 찾기 ></a>
                 </div>
 
